# C-Template

./: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  README.md  br.cmd  build.cmd  build.ninja  cmake_install.cmake  run.cmd
source/: Main.cpp
